# googletest

./: PROJECT_INSTRUCTION.md  summary.md
benchmark/: simple_test  simple_test.cpp
benchmark/benchmark_training/: 01_first_benchmark.cpp  02_custom_main.cpp  03_do_not_optimize.cpp  04_clobber_memory.cpp  05_parameterized.cpp  06_pause_resume.cpp  07_summary.cpp  08_complexity.cpp  09_fixture.cpp  10_parameter_combo.cpp  11_multithread.cpp  12_counters.cpp  13_realworld.cpp  CMakeLists.txt  README.md  exercise_bad_vs_good.cpp  run_all.sh
docs/: architecture.md  glossary.md  integration-test-coverage.md  release-readiness-v0.1-rc1.md  test-plan.md
docs/adr/: ADR-001  ADR-002-config-grammar.md  ADR-003-config-tree.md  ADR-004-mode-system.md  ADR-005-runtime-state.md  ADR-006-cgroup-driver.md  ADR-007-process-discovery.md  ADR-008-recovery.md  ADR-009-controller-model.md  ADR-010-attach-engine.md  ADR-011-hot-reload.md  ADR-012-error-model.md
docs/conflicts/: ADR-CONFLICT-001-path-format.md
docs/plans/: PLANS.md
gtest/: DOCS.md
gtest/demo/: CMakeLists.txt  assertions_test.cpp  fixture_excise.cpp  fixture_test.cpp  main.cpp  mock_test.cpp  param_excese.cpp  param_test.cpp  user_service_test.cpp
resource-manager/: .gitignore  CMakeLists.txt  README.md
resource-manager/configs/: example.conf
resource-manager/docs/: adr-coverage-matrix.md  config-domain-design.md  dependency-review-report.md  failure-analysis-report.md  logging-design.md  recovery-architecture-resolution.md  recovery-data-model-fix.md  recovery-gap-analysis.md  recovery-metadata-report.md  v12-architecture.md
resource-manager/include/resource_manager/attach/: attach_engine.h  attach_policy.h  attach_tracker.h
resource-manager/include/resource_manager/common/: types.h
resource-manager/include/resource_manager/core/: config_differ.h  config_domain.h  config_loader.h  config_parser.h  config_renderer.h  config_repository.h  parser.h  resource_transaction.h  rule_builder.h  validator.h
resource-manager/include/resource_manager/discovery/: discovery_cache.h  discovery_rules.h  discovery_service.h  iprocess_discovery.h  procfs_discovery.h
resource-manager/include/resource_manager/driver/: cgroup_v2_driver.h  control_file_type.h  icgroup_driver.h  mock_cgroup_driver.h  resource_applier.h  resource_snapshot.h  resource_validator.h
resource-manager/include/resource_manager/error/: error.h
resource-manager/include/resource_manager/lexer/: lexer.h  token.h
resource-manager/include/resource_manager/log/: ilogger.h  logger.h
resource-manager/include/resource_manager/mode/: mode.h
resource-manager/include/resource_manager/monitor/: monitor.h  process_watcher.h  runtime_reconciler.h
resource-manager/include/resource_manager/recovery/: recovery_manager.h
resource-manager/include/resource_manager/state/: runtime_event.h  runtime_repository.h  runtime_snapshot.h  runtime_state.h  runtime_state_machine.h  runtime_state_manager.h
resource-manager/src/: CMakeLists.txt
resource-manager/src/attach/: attach_engine.cpp  attach_policy.cpp  attach_tracker.cpp
resource-manager/src/core/: config_differ.cpp  config_domain.cpp  config_loader.cpp  config_parser.cpp  config_renderer.cpp  config_repository.cpp  parser.cpp  resource_transaction.cpp  rule_builder.cpp  validator.cpp
resource-manager/src/discovery/: discovery_cache.cpp  discovery_rules.cpp  discovery_service.cpp  process_discovery.cpp  procfs_discovery.cpp
resource-manager/src/driver/: cgroup_v1_driver.cpp  cgroup_v2_driver.cpp  control_file_type.cpp  icgroup_driver.cpp  mock_cgroup_driver.cpp  resource_applier.cpp  resource_snapshot.cpp  resource_validator.cpp
resource-manager/src/lexer/: lexer.cpp
resource-manager/src/log/: logger.cpp
resource-manager/src/main/: main.cpp
resource-manager/src/mode/: mode.cpp
resource-manager/src/monitor/: monitor.cpp  process_watcher.cpp  runtime_reconciler.cpp
resource-manager/src/recovery/: recovery_manager.cpp
resource-manager/src/state/: runtime_event.cpp  runtime_repository.cpp  runtime_snapshot.cpp  runtime_state.cpp  runtime_state_machine.cpp  runtime_state_manager.cpp
resource-manager/tests/: CMakeLists.txt
resource-manager/tests/attach/: test_attach_engine.cpp  test_attach_policy.cpp  test_attach_tracker.cpp
resource-manager/tests/core/: test_config_differ.cpp  test_config_domain.cpp  test_config_loader.cpp  test_config_parser.cpp  test_config_renderer.cpp  test_config_repository.cpp  test_parser.cpp  test_resource_transaction.cpp  test_validator.cpp
resource-manager/tests/discovery/: test_discovery_cache.cpp  test_discovery_rules.cpp  test_discovery_service.cpp  test_process_discovery.cpp  test_procfs_discovery.cpp
resource-manager/tests/driver/: test_cgroup_driver.cpp  test_cgroup_v2_driver.cpp  test_controller_registry.cpp  test_resource_applier.cpp  test_resource_snapshot.cpp  test_resource_validator.cpp
resource-manager/tests/error/: test_error.cpp
resource-manager/tests/integration/: test_integration.cpp
resource-manager/tests/lexer/: test_lexer.cpp
resource-manager/tests/log/: test_logger.cpp
resource-manager/tests/mode/: test_mode.cpp
resource-manager/tests/monitor/: test_monitor.cpp  test_process_watcher.cpp  test_runtime_reconciler.cpp
resource-manager/tests/recovery/: test_recovery_manager.cpp
resource-manager/tests/state/: test_runtime_event.cpp  test_runtime_repository.cpp  test_runtime_snapshot.cpp  test_runtime_state.cpp  test_runtime_state_machine.cpp
resource-manager/tools/: lint.sh  run_tests.sh
